--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.65.0",
-    "react-router": "^7.9.2",
+    "react-router": "^7.9.4",
     "tailwind-merge": "^3.3.1",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
-    "@react-router/dev": "^7.9.2",
+    "@netlify/vite-plugin-react-router": "^2.0.0",
+    "@react-router/dev": "^7.9.4",
     "@tailwindcss/vite": "^4.1.13",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/node": "^22",
