feat: integrate Stripe payments with serverless functions
- Add Stripe payment processing with @stripe/react-stripe-js and @stripe/stripe-js
- Create Netlify serverless function for payment intent creation
- Add typescript PaymentForm component with improved error handling
- Fix authentication logic bugs in nav bar and public-only layout
- Add UI spinner component and update button to use it conditionally
- Add dotenv and env generation script for deployment
- Remove old SCSS-based payment form components
- Update checkout page to integrate with Stripe Elements

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-command = "react-router build"
+command = "node scripts/generate-env.js && react-router build"
 publish = "build/client"
 
 [dev]
