--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "dependencies": {
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-navigation-menu": "^1.2.14",
-    "@react-router/node": "^7.9.2",
+    "@react-router/node": "^7.9.4",
     "@react-router/serve": "^7.9.2",
+    "@stripe/react-stripe-js": "^5.2.0",
+    "@stripe/stripe-js": "^8.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.3",
     "firebase": "^12.4.0",
     "isbot": "^5.1.31",
     "lucide-react": "^0.546.0",
@@ -22,6 +25,7 @@
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.65.0",
     "react-router": "^7.9.4",
+    "stripe": "^19.1.0",
     "tailwind-merge": "^3.3.1",
     "zustand": "^5.0.8"
   },
